rbdl/tests/not_found.stderr
error: proc macro panicked
 --> $DIR/not_found.rs:3:1
  |
3 | rbdl_file!("A File That Doesn't Exist");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: A File That Doesn't Exist: No such file or directory (os error 2)
