rbdl/tests/not_found.rs
use rbdl::rbdl_file;

rbdl_file!("A File That Doesn't Exist");

fn main() {

}